--- a/css/main.css
+++ b/css/main.css
@@ -44,3 +44,51 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  margin: 40px;
+  border-radius: 7px;
+  align-items: center; }
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  border-radius: 3px;
+  align-items: center;
+  margin: 0 20px;
+  width: 100%;
+  height: 170px;
+  background-color: #FFC76D;
+  padding: 20px; }
+
+.btn, .bottom-btn {
+  background-color: #FF463F;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  padding: 15px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 5px;
+  font-size: 1em;
+  width: 90px;
+  cursor: pointer; }
+
+.segwayPic {
+  border-radius: 3px; }
+
+.segName {
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 15px;
+  font-weight: bold; }
+
+.segDesc {
+  font-size: 1.2em;
+  text-align: center; }
+
+.bottom-btn {
+  margin-top: auto; }
