--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ table {
   background-color: #FFC76D;
   padding: 20px; }
 
-.btn, .bottom-btn {
+.btn, .bottom-btn, .top-btn {
   background-color: #FF463F;
   border: none;
   border-radius: 5px;
@@ -76,22 +76,6 @@ table {
   font-size: 1em;
   width: 90px;
   cursor: pointer; }
-
-.segwayPic {
-  border-radius: 3px; }
-
-.segName {
-  font-size: 1.5em;
-  text-align: center;
-  margin-bottom: 15px;
-  font-weight: bold; }
-
-.segDesc {
-  font-size: 1.2em;
-  text-align: center; }
-
-.bottom-btn {
-  margin-top: auto; }
 
 .btn-theme-1 {
   padding: 25px 30px !important;
@@ -113,3 +97,31 @@ table {
 
 .right-mar {
   margin-right: 50px; }
+
+.segwayPic {
+  border-radius: 3px; }
+
+.segName {
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 15px;
+  font-weight: bold; }
+
+.segDesc {
+  font-size: 1.2em;
+  text-align: center; }
+
+.bottom-btn {
+  margin-top: auto; }
+
+.top-btn {
+  margin-bottom: auto; }
+
+.nav {
+  overflow: hidden;
+  background-color: #FF463F; }
+
+.nav-item:hover {
+  color: #fff;
+  border-bottom: 5px solid #FFC76D;
+  margin-top: 10px; }
