--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,21 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+body {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+h1 {
+  font-size: 20px;
+  font-weight: bold; }
+
+.outline {
+  border: 1px dashed #000; }
+
 .flex-row {
   display: flex;
   flex-direction: row;
@@ -62,6 +77,16 @@ table {
   height: 170px;
   background-color: #FFC76D;
   padding: 20px; }
+
+.tab {
+  flex: 1;
+  text-align: center;
+  border: 1px solid #00f;
+  height: 50px;
+  min-width: 75px; }
+
+.tabs:hover {
+  cursor: pointer; }
 
 .btn, .bottom-btn, .top-btn {
   background-color: #FF463F;
@@ -125,3 +150,20 @@ table {
   color: #fff;
   border-bottom: 5px solid #FFC76D;
   margin-top: 10px; }
+
+.container {
+  height: 450px; }
+
+.inner-box {
+  width: 50%;
+  text-align: left; }
+
+.flex-tabs {
+  width: 100%;
+  height: 20%;
+  align-content: center;
+  justify-content: center;
+  margin-bottom: 400px; }
+
+.active {
+  background-color: #21f; }
