BUTTONS TABS WORK! TAAABSSS

--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,11 @@ table {
   background-color: #FFC76D;
   padding: 20px; }
 
+.tab {
+  border: 1px dashed #FAB;
+  flex: 1;
+  cursor: pointer; }
+
 .btn, .bottom-btn, .top-btn {
   background-color: #FF463F;
   border: none;
@@ -76,6 +81,34 @@ table {
   font-size: 1em;
   width: 90px;
   cursor: pointer; }
+
+.active {
+  background-color: #32CD32; }
+
+#custom_page {
+  display: flex;
+  flex-direction: column; }
+
+.tabContainer {
+  display: flex;
+  flex-direction: row;
+  border: 1px dashed #FAB;
+  width: 450px; }
+
+.btnContainer {
+  flex-direction: column;
+  order: 1;
+  border: 1px dashed #32CD32;
+  width: 450px; }
+
+#tire {
+  display: none; }
+
+#engine {
+  display: none; }
+
+#custom {
+  display: none; }
 
 .btn-theme-1 {
   padding: 25px 30px !important;
@@ -125,3 +158,5 @@ table {
   color: #fff;
   border-bottom: 5px solid #FFC76D;
   margin-top: 10px; }
+
+/*# sourceMappingURL=main.css.map */
