BUTTONS AND 1 COLOUR OR DEEP FRIED!

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ table {
   width: 450px; }
 
 .btnContainer {
-  flex-direction: column;
+  flex-direction: row;
   order: 1;
   border: 1px dashed #32CD32;
   width: 450px; }
@@ -158,5 +158,8 @@ table {
   color: #fff;
   border-bottom: 5px solid #FFC76D;
   margin-top: 10px; }
+
+.notActive {
+  background-color: #FF463F; }
 
 /*# sourceMappingURL=main.css.map */
