--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -49,7 +49,7 @@
   width: 450px; }
 
 .btnContainer {
-  flex-direction: column;
+  flex-direction: row;
   order: 1;
   border: 1px dashed #32CD32;
   width: 450px; }
@@ -111,5 +111,8 @@
   color: #fff;
   border-bottom: 5px solid #FFC76D;
   margin-top: 10px; }
+
+.notActive {
+  background-color: #FF463F; }
 
 /*# sourceMappingURL=ui-elements.css.map */
