--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,21 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+body {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+h1 {
+  font-size: 20px;
+  font-weight: bold; }
+
+.outline {
+  border: 1px dashed #000; }
+
 .flex-row {
   display: flex;
   flex-direction: row;
@@ -66,6 +81,11 @@ table {
 .tab {
   border: 1px dashed #FAB;
   flex: 1;
+  cursor: pointer;
+  padding: 10px;
+  text-align: center; }
+
+.tabs:hover {
   cursor: pointer; }
 
 .btn, .bottom-btn, .top-btn {
@@ -86,20 +106,27 @@ table {
   background-color: #32CD32; }
 
 #custom_page {
-  display: flex;
-  flex-direction: column; }
+  padding: 50px;
+  display: flex; }
+
+.custom_pageContainer {
+  flex-direction: column;
+  padding-left: 225px; }
 
 .tabContainer {
   display: flex;
   flex-direction: row;
   border: 1px dashed #FAB;
-  width: 450px; }
+  width: 350px; }
 
 .btnContainer {
   flex-direction: row;
   order: 1;
   border: 1px dashed #32CD32;
-  width: 450px; }
+  width: 235px;
+  padding-left: 115px;
+  padding-top: 10px;
+  padding-bottom: 10px; }
 
 #tire {
   display: none; }
@@ -131,6 +158,12 @@ table {
 .right-mar {
   margin-right: 50px; }
 
+.segboi_img {
+  height: 470px;
+  width: 309px;
+  border: 2px dashed chartreuse;
+  margin-right: 200px; }
+
 .segwayPic {
   border-radius: 3px; }
 
@@ -159,7 +192,21 @@ table {
   border-bottom: 5px solid #FFC76D;
   margin-top: 10px; }
 
-.notActive {
-  background-color: #FF463F; }
+.container {
+  height: 450px; }
+
+.inner-box {
+  width: 50%;
+  text-align: left; }
+
+.flex-tabs {
+  width: 100%;
+  height: 20%;
+  align-content: center;
+  justify-content: center;
+  margin-bottom: 400px; }
+
+.active {
+  background-color: #21f; }
 
 /*# sourceMappingURL=main.css.map */
