--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,8 @@ body {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+  background-color: #f2ebd9; }
 
 h1 {
   font-size: 20px;
@@ -65,7 +66,8 @@ h1 {
   flex-direction: row;
   margin: 40px;
   border-radius: 7px;
-  align-items: center; }
+  align-items: center;
+  background-color: #f4be58; }
 
 .flex-col {
   display: flex;
@@ -75,7 +77,6 @@ h1 {
   margin: 0 20px;
   width: 100%;
   height: 170px;
-  background-color: #FFC76D;
   padding: 20px; }
 
 .tab {
@@ -89,7 +90,7 @@ h1 {
   cursor: pointer; }
 
 .btn, .bottom-btn, .top-btn {
-  background-color: #FF463F;
+  background-color: #ad1e1e;
   border: none;
   border-radius: 5px;
   color: #fff;
@@ -158,6 +159,14 @@ h1 {
 .right-mar {
   margin-right: 50px; }
 
+.specialStyle {
+  width: 500px;
+  height: fit-content; }
+
+#segway {
+  display: flex;
+  flex-wrap: wrap; }
+
 .segboi_img {
   height: 470px;
   width: 309px;
@@ -165,6 +174,9 @@ h1 {
   margin-right: 200px; }
 
 .segwayPic {
+  border-radius: 3px;
+  margin: 0 20px;
+  padding: 20px;
   border-radius: 3px; }
 
 .segName {
@@ -178,14 +190,14 @@ h1 {
   text-align: center; }
 
 .bottom-btn {
-  margin-top: auto; }
+  margin-top: 30px; }
 
 .top-btn {
   margin-bottom: auto; }
 
 .nav {
   overflow: hidden;
-  background-color: #FF463F; }
+  background-color: #ad1e1e; }
 
 .nav-item:hover {
   color: #fff;
@@ -208,5 +220,3 @@ h1 {
 
 .active {
   background-color: #21f; }
-
-/*# sourceMappingURL=main.css.map */
