--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -4,7 +4,8 @@ body {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+  background-color: #f2ebd9; }
 
 h1 {
   font-size: 20px;
@@ -18,7 +19,8 @@ h1 {
   flex-direction: row;
   margin: 40px;
   border-radius: 7px;
-  align-items: center; }
+  align-items: center;
+  background-color: #f4be58; }
 
 .flex-col {
   display: flex;
@@ -28,7 +30,6 @@ h1 {
   margin: 0 20px;
   width: 100%;
   height: 170px;
-  background-color: #FFC76D;
   padding: 20px; }
 
 .tab {
@@ -42,7 +43,7 @@ h1 {
   cursor: pointer; }
 
 .btn, .bottom-btn, .top-btn {
-  background-color: #FF463F;
+  background-color: #ad1e1e;
   border: none;
   border-radius: 5px;
   color: #fff;
@@ -111,6 +112,14 @@ h1 {
 .right-mar {
   margin-right: 50px; }
 
+.specialStyle {
+  width: 500px;
+  height: fit-content; }
+
+#segway {
+  display: flex;
+  flex-wrap: wrap; }
+
 .segboi_img {
   height: 470px;
   width: 309px;
@@ -118,6 +127,9 @@ h1 {
   margin-right: 200px; }
 
 .segwayPic {
+  border-radius: 3px;
+  margin: 0 20px;
+  padding: 20px;
   border-radius: 3px; }
 
 .segName {
@@ -131,14 +143,14 @@ h1 {
   text-align: center; }
 
 .bottom-btn {
-  margin-top: auto; }
+  margin-top: 30px; }
 
 .top-btn {
   margin-bottom: auto; }
 
 .nav {
   overflow: hidden;
-  background-color: #FF463F; }
+  background-color: #ad1e1e; }
 
 .nav-item:hover {
   color: #fff;
@@ -161,5 +173,3 @@ h1 {
 
 .active {
   background-color: #21f; }
-
-/*# sourceMappingURL=ui-elements.css.map */
