some more sass stuff

--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -19,8 +19,7 @@ h1 {
   flex-direction: row;
   margin: 40px;
   border-radius: 7px;
-  align-items: center;
-  background-color: #f4be58; }
+  align-items: center; }
 
 .flex-col {
   display: flex;
@@ -95,7 +94,7 @@ h1 {
   padding: 25px 30px !important;
   width: 150px;
   font-size: 1.2em;
-  margin: 40px 0; }
+  margin: 40px; }
 
 #thanks-msg {
   font-size: 2.5em;
