--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,15 @@ h1 {
   height: 170px;
   padding: 20px; }
 
+.check-flex-col {
+  display: flex;
+  flex-direction: column;
+  padding: 20px; }
+
+.check-flex-row {
+  display: flex;
+  flex-direction: row; }
+
 .tab {
   border: 1px dashed #FAB;
   flex: 1;
