--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ h1 {
 
 .custom_pageContainer {
   flex-direction: column;
-  padding-left: 225px; }
+  padding-left: 175px; }
 
 .tabContainer {
   display: flex;
@@ -227,5 +227,11 @@ canvas {
 
 .active {
   background-color: #21f; }
+
+.price {
+  border: 2px dashed #b300ff;
+  height: 25px;
+  width: 100px;
+  text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
