--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -65,7 +65,7 @@ h1 {
 
 .custom_pageContainer {
   flex-direction: column;
-  padding-left: 225px; }
+  padding-left: 175px; }
 
 .tabContainer {
   display: flex;
@@ -180,5 +180,11 @@ canvas {
 
 .active {
   background-color: #21f; }
+
+.price {
+  border: 2px dashed #b300ff;
+  height: 25px;
+  width: 100px;
+  text-align: center; }
 
 /*# sourceMappingURL=ui-elements.css.map */
