--- a/sass/ui-elements.scss
+++ b/sass/ui-elements.scss
@@ -74,7 +74,7 @@ h1 {
   //display: flex;
   flex-direction: column;
   // padding-top: 25px;
-  padding-left: 225px;
+  padding-left: 175px;
 }
 
 .tabContainer {
@@ -239,4 +239,11 @@ canvas {
 
 .active {
   background-color: #21f;
+}
+
+.price {
+  border: 2px dashed #b300ff;  
+  height: 25px;
+  width: 100px;
+  text-align: center;
 }
