--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,9 @@ h1 {
   font-weight: bold; }
 
 .outline {
-  border: 1px dashed #000; }
+  border: 3px solid #000;
+  margin: 70px auto;
+  padding: 100px; }
 
 .flex-row {
   display: flex;
@@ -79,13 +81,13 @@ h1 {
   padding: 20px; }
 
 .check-flex-col {
-  display: flex;
-  flex-direction: column;
-  padding: 20px; }
+  display: flex !important;
+  flex-direction: column !important;
+  padding: 20px !important; }
 
 .check-flex-row {
-  display: flex;
-  flex-direction: row; }
+  display: flex !important;
+  flex-direction: row !important; }
 
 .tab {
   border: 1px dashed #FAB;
@@ -97,7 +99,7 @@ h1 {
 .tabs:hover {
   cursor: pointer; }
 
-.btn, .bottom-btn, .top-btn {
+.btn, .bottom-btn, .checkBtn, .top-btn {
   background-color: #ad1e1e;
   border: none;
   border-radius: 5px;
@@ -118,24 +120,31 @@ h1 {
   padding: 50px;
   display: flex; }
 
-.custom_pageContainer {
-  flex-direction: column;
-  padding-left: 175px; }
-
 .tabContainer {
   display: flex;
   flex-direction: row;
-  border: 1px dashed #FAB;
   width: 350px; }
 
 .btnContainer {
   flex-direction: row;
   order: 1;
-  border: 1px dashed #32CD32;
+  border: 3px solid #000;
   width: 235px;
   padding-left: 115px;
   padding-top: 10px;
   padding-bottom: 10px; }
+
+.colourTab {
+  border: 3px solid #FAB; }
+
+.tireTab {
+  border: 3px solid #FAB; }
+
+.engineTab {
+  border: 3px solid #FAB; }
+
+.customTab {
+  border: 3px solid #FAB; }
 
 #tire {
   display: none; }
@@ -177,15 +186,12 @@ h1 {
 
 .segboi_img {
   height: 470px;
-  width: 309px;
-  border: 2px dashed chartreuse;
-  margin-right: 200px;
   position: relative; }
 
 canvas {
   height: 470px;
   width: 308px;
-  border: 3px dashed #f0c;
+  border: 3px solid #000;
   position: absolute; }
 
 .segwayPic {
@@ -206,6 +212,12 @@ canvas {
 
 .bottom-btn {
   margin-top: 30px; }
+
+.checkBtn {
+  padding: 20px;
+  width: 150px;
+  text-align: center;
+  font-size: 1.3em; }
 
 .top-btn {
   margin-bottom: auto; }
@@ -243,7 +255,8 @@ li a:hover {
 
 .inner-box {
   width: 50%;
-  text-align: left; }
+  text-align: left;
+  font-size: 1.5em; }
 
 .flex-tabs {
   width: 100%;
