ISCOMPLETE! Finalboi's final evolution

--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -187,4 +187,8 @@ canvas {
   width: 100px;
   text-align: center; }
 
+#orderCustomBtn {
+  margin-top: 50px;
+  margin-left: 20px; }
+
 /*# sourceMappingURL=ui-elements.css.map */
