--- a/css/main.css
+++ b/css/main.css
@@ -234,4 +234,8 @@ canvas {
   width: 100px;
   text-align: center; }
 
+#orderCustomBtn {
+  margin-top: 115px;
+  margin-left: 116px; }
+
 /*# sourceMappingURL=main.css.map */
