--- a/css/main.css
+++ b/css/main.css
@@ -275,7 +275,8 @@ li a:hover {
   height: 25px;
   width: 100px;
   text-align: center;
-  margin-left: 500px; }
+  margin-left: 500px;
+  margin-top: 10px; }
 
 #orderCustomBtn {
   margin-left: 890px; }
