--- a/sass/ui-elements.scss
+++ b/sass/ui-elements.scss
@@ -287,6 +287,7 @@ li a:hover {
   width: 100px;
   text-align: center;
   margin-left: 500px;
+  margin-top: 10px;
 }
 
 #orderCustomBtn {
@@ -331,5 +332,6 @@ li a:hover {
     /* text-align: center; */
     height: 25px;
     /* padding-top: 25px; */
-}
+  }
+
 }
