--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -75,8 +75,8 @@ h1 {
   display: flex; }
 
 .custom_pageContainer {
-  margin-left: 750px;
-  margin-top: -511px; }
+  margin: 20px auto;
+  max-width: 60%; }
 
 .tabContainer {
   display: flex;
@@ -125,11 +125,11 @@ h1 {
   margin-top: 20px; }
 
 .thanks {
-  margin: auto;
   height: 50%;
   width: 80%;
   border-radius: 3px;
-  margin-top: 10%; }
+  margin: 20px auto;
+  max-width: 60%; }
 
 .right-mar {
   margin-right: 50px; }
@@ -270,4 +270,8 @@ li a:hover {
     /* padding-top: 25px; */ }
 
   .segwayPic {
-    width: 90%; } }
+    width: 90%; }
+
+  .canvas {
+    height: 370px;
+    width: 208px; } }
