--- a/sass/ui-elements.scss
+++ b/sass/ui-elements.scss
@@ -84,11 +84,11 @@ h1 {
 }
 
 .custom_pageContainer {
-  // padding-top: 25px;
-  // margin-left: 750px;
-  // margin-top: -511px;
-  margin: 20px auto;
-  max-width: 60%;
+  padding-top: 25px;
+  margin-left: 750px;
+  margin-top: -511px;
+  // margin: 20px auto;
+  // max-width: 60%;
 }
 
 .tabContainer {
@@ -300,7 +300,7 @@ li a:hover {
 #orderCustomBtn {
   // margin-top: 115px;
   // margin-left: 116px;
-  margin-left: 890px;
+  margin-left: 882px;
 }
 
 @media all and (max-width: 550px) {
