--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ h1 {
   align-items: center;
   margin: 0 20px;
   width: 100%;
-  height: 170px;
+  height: fit-content;
   padding: 20px; }
 
 .check-flex-col {
@@ -321,4 +321,14 @@ li a:hover {
 
   .canvas {
     height: 370px;
-    width: 208px; } }
+    width: 208px; }
+
+  .inner-box {
+    font-size: 0.9em; }
+
+  .checkBtn {
+    font-size: 0.9em; }
+
+  #btnArea {
+    margin: 0 !important;
+    padding: 5px !important; } }
