--- a/sass/ui-elements.scss
+++ b/sass/ui-elements.scss
@@ -78,9 +78,9 @@ h1 {
   background-color: #32CD32;
 }
 
-#custom_page {
-  padding: 50px;
-  display: flex;
+.custom_page {
+  // padding: 50px;
+  // display: flex;
 }
 
 .custom_pageContainer {
@@ -293,14 +293,14 @@ li a:hover {
   height: 25px;
   width: 100px;
   text-align: center;
-  margin-left: 500px;
-  margin-top: 10px;
+  // margin-left: 500px;
+  // margin-top: 10px;
 }
 
 #orderCustomBtn {
   // margin-top: 115px;
   // margin-left: 116px;
-  margin-left: 882px;
+  // margin-left: 882px;
 }
 
 @media all and (max-width: 550px) {
